# file-share-backend

./: .env  Cargo.toml  README.md  cliff.toml  deny.toml
migrations/: 20241112024812_tables.sql
src/: config.rs  lib.rs
src/models/: files.rs  mod.rs  shared_links.rs  users.rs
