[package]
name = "secure-share-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = "1.0.93"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.7", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
axum-extra = { version = "0.9.4", features = ["typed-header", "cookie"] }
base64 = "0.22.1"
block-modes = "0.9.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
rsa = "0.9.6"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "uuid",
] }
tokio = { version = "1.41.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }
tokio-cron-scheduler = "0.13.0"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
validator = { version = "0.19.0", features = ["derive"] }
